[tool.poetry]
name = "tnseminar"
version = "0.1.0"
description = ""
authors = ["sanibonani"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
